welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:5: error: '(' expected but identifier found.
    if m < nums(k){
       ^maxValue:9: error: illegal start of simple expression
  }
  ^